Fixed missing horizontal scrollbar.

--- a/src/nerdbox.css
+++ b/src/nerdbox.css
@@ -82,7 +82,6 @@
 
 #nerdbox .nb-content {
   background: #FFF;
-  overflow: auto;
   -webkit-border-radius:4px;
   -moz-border-radius:4px;
   border-radius:4px;
